alignment issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ body {
     width: 75%;
     padding-bottom: 20px;
     background-color: white;
+    height: 100%;
 }
 
 h1, h3, li {
